[FUNC-1] Implementada testAddCourseAndFindCourse [FUNC-2] Implementada testAddCourseAndFindCourse